--- a/ergogen/config.yaml
+++ b/ergogen/config.yaml
@@ -24,17 +24,11 @@ units:
   $default_height: 17 - 0.5
 
 points:
-  # mirror:
-  #   ref: finger-zone_pinky_top
-  #   distance: -1.2 * outline_width
   zones:
     # Finger rows
     finger-zone:
-      mirror:
-        ref: finger-zone_pinky_top
-        distance: -1.2 * outline_width
       anchor:
-        shift: [230, -160] # fixing kicad placement
+        shift: [160, -160] # fixing kicad placement
       key:
         padding: key_height  # vertical spacing between keys
         spread: key_width   # horizontal spacing between keys
@@ -70,9 +64,6 @@ points:
 
     # Thumb cluster
     thumb-zone:
-      mirror:
-          ref: finger-zone_pinky_top
-          distance: -1.2 * outline_width
       anchor:
         ref: finger-zone_inner_bottom # ref to a key zone_column_row
         shift: [0 - 6, -1 * key_height - 2.5]
@@ -106,7 +97,7 @@ outlines:
       bound: false
       size: [key_width - 0.5, key_height - 0.5]
 
-  fill-left:
+  fill:
     - what: polygon
       operation: stack
       fillet: 2
@@ -139,45 +130,6 @@ outlines:
           shift: [0.5 * outline_width, -0.5 * outline_height]
         - ref: finger-zone_pinky_bottom
           shift: [-0.5 * outline_width, -0.5 * outline_height]
-  
-  fill-right:
-    - what: polygon
-      operation: stack
-      fillet: 2
-      points:
-        - ref: mirror_finger-zone_pinky_top
-          shift: [-0.5 * outline_width, 0.5 * outline_height]
-
-        - ref: mirror_finger-zone_pinky_top
-          shift: [0.5 * outline_width + key_width, 0.5 * outline_height]
-        
-        - ref: mirror_finger-zone_inner_home
-          shift: [-0.5 * key_width + mcu_padding_width + 0.5 * (outline_width - key_width) + mcu_width, mcu_position_height + key_height]
-        - ref: mirror_finger-zone_inner_home
-          shift: [0.5 * key_width + mcu_padding_width + 0.5 * (outline_width - key_width) + mcu_width, mcu_position_height + key_height]
-
-        - ref: mirror_finger-zone_inner_bottom
-          shift: [0.5 * key_width + mcu_padding_width + 0.5 * (outline_width - key_width) + mcu_width, -0.5 * key_height]
-
-        - ref: mirror_thumb-zone_outer_sole
-          shift: [0.5 * outline_width, 0.5 * outline_height]
-        - ref: mirror_thumb-zone_outer_sole
-          shift: [0.5 * outline_width, -0.5 * outline_height]
-        - ref: mirror_thumb-zone_outer_sole
-          shift: [-0.5 * outline_width, -0.5 * outline_height]
-
-        - ref: mirror_thumb-zone_inner_sole
-          shift: [-.5 * outline_width, -0.5 * outline_height]
-
-        - ref: mirror_finger-zone_pinky_bottom
-          shift: [0.5 * outline_width, -0.5 * outline_height]
-        - ref: mirror_finger-zone_pinky_bottom
-          shift: [-0.5 * outline_width, -0.5 * outline_height]
-
-  fill:
-    - name: fill-left
-    - operation: add
-      name: fill-right
 
   keys_outline:
     - what: rectangle
@@ -208,7 +160,7 @@ pcbs:
         where: true
         params:
           keycaps: true
-          reverse: false
+          reverse: true
           hotswap: true
           from: "{{column_net}}"
           to: "{{colrow}}"
@@ -216,16 +168,29 @@ pcbs:
       diode:
         what: smd-diode
         where: true
-        asym: source
         params:
           from: "{{colrow}}"
           to: "{{row_net}}"
         adjust:
-          shift: [8.25, -1]
-          rotate: 90
+          shift: [0, -4]
 
+      via-row:
+        what: via
+        where: true
+        params:
+          net: "{{row_net}}"
+        adjust:
+          shift: [-4, -4]
+        
+      via-column-2:
+        what: via
+        where: true
+        params:
+          net: "{{column_net}}"
+        adjust:
+          shift: [-3.2, 2]
 
-      mcu-left:
+      mcu:
         what: nicenano
         params:
           orientation: "down"
@@ -234,34 +199,15 @@ pcbs:
           shift: [key_width + mcu_padding_width, mcu_position_height -1]
           rotate: -90
 
-
-      mcu-right:
-        what: nicenano
-        params:
-          orientation: "down"
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width, mcu_position_height -1]
-          rotate: 90
-
-      battery-left: # todo sort to and from
+      battery:
         what: battery
         where:
           ref:
             - finger-zone_inner_home
           shift: [key_width + mcu_padding_width, mcu_position_height + 15.5]
           rotate: -90
-        
 
-      battery-right: # todo sort to and from
-        what: battery
-        where:
-          ref:
-            - mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width, mcu_position_height + 15.5]
-          rotate: 90
-
-      power-switch-left: # todo sort to and from
+      power-switch:
         what: slider_reversible
         where:
           ref:
@@ -269,79 +215,22 @@ pcbs:
           shift: [key_width + mcu_padding_width, mcu_position_height + 15.5]
         params:
           side: B
-          reverse: false
+          reverse: true
           from: RAW
           to: POSITIVE
-
-      power-switch-right: # todo sort to and from
-        what: slider_reversible
-        where:
-          ref:
-            - mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width, mcu_position_height + 15.5]
-        params:
-          side: B
-          reverse: false
-          from: RAW
-          to: POSITIVE
-
-      nice-view-left:
-        what: niceview
-        where:
-          ref:
-            - finger-zone_inner_home
-          shift: [key_width + mcu_padding_width, mcu_position_height -20.5]
-        adjust:
-          rotate: 90
-        params:
-          outline: true
-          side: 'F'
-          MOSI: MOSI
-          SCK: SCK
-          VCC: VCC
-          GND: GND
-          CS: CS
       
-      nice-view-right:
-        what: niceview
-        where:
-          ref:
-            - mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width, mcu_position_height -20.5]
-        adjust:
-          rotate: -90
-        params:
-          outline: true
-          side: 'F'
-          MOSI: MOSI
-          SCK: SCK
-          VCC: VCC
-          GND: GND
-          CS: CS
-      
-      reset-left:
+      reset:
         what: b3u1000p
         where:
           - ref: finger-zone_inner_home
-            shift: [key_width + mcu_padding_width, mcu_position_height -27]
+            shift: [key_width + mcu_padding_width, mcu_position_height -23]
             rotate: 180
         params:
           r1: GND
           r2: RST
-          reverse: false
+          reverse: true
 
-      reset-right:
-        what: b3u1000p
-        where:
-          - ref: mirror_finger-zone_inner_home
-            shift: [key_width + mcu_padding_width, mcu_position_height -27]
-            rotate: -180
-        params:
-          r1: GND
-          r2: RST
-          reverse: false
-
-      # MCU Left
+      # MCU
       via-gnd-1: 
         what: via
         where:
@@ -406,14 +295,6 @@ pcbs:
         params:
           net: RAW
 
-      via-positive-1:
-        what: via
-        where:
-          ref: finger-zone_inner_home
-          shift: [key_width + mcu_padding_width - 0.3, mcu_position_height + 13]
-        params:
-          net: POSITIVE
-
       via-vcc-1:
         what: via
         where:
@@ -430,301 +311,10 @@ pcbs:
         params:
           net: ROW1
 
-      # Lower Section Left
       via_reset-1:
         what: via
         where:
           ref: finger-zone_inner_home
-          shift: [key_width + mcu_padding_width - 6.4, mcu_position_height - 27]
+          shift: [key_width + mcu_padding_width - 6.4, mcu_position_height - 23]
         params:
           net: RST
-
-      via_col4_1:
-        what: via
-        where:
-          ref: thumb-zone_outer_sole
-          shift: [-5.8 , 5.7]
-        params:
-          net: COL4
-
-      via_col4_2:
-        what: via
-        where:
-          ref: finger-zone_inner_bottom
-          shift: [-3.25 , 3.6]
-        params:
-          net: COL4
-
-      # via_col3_1:
-      #   what: via
-      #   where:
-      #     ref: thumb-zone_inner_sole
-      #     shift: [-5.8 , 5.7]
-      #   params:
-      #     net: COL3
-
-      via_col3_2:
-        what: via
-        where:
-          ref: finger-zone_index_bottom
-          shift: [-3.25 , 3.6]
-        params:
-          net: COL3
-
-      via_col0_1:
-        what: via
-        where:
-          ref: finger-zone_pinky_bottom
-          shift: [-3.25 , 8.2]
-        params:
-          net: COL0
-
-      via_col1_1:
-        what: via
-        where:
-          ref: finger-zone_ring_bottom
-          shift: [-3.25 , 8.2]
-        params:
-          net: COL1
-
-      via_col2_1:
-        what: via
-        where:
-          ref: finger-zone_middle_bottom
-          shift: [-3.25 , 8.2]
-        params:
-          net: COL2
-
-      via_col2_2:
-        what: via
-        where:
-          ref: finger-zone_inner_home
-          shift: [key_width + mcu_padding_width -11.3, mcu_position_height - 1]
-        params:
-          net: COL2
-
-      via_col1_3:
-        what: via
-        where:
-          ref: finger-zone_inner_home
-          shift: [key_width + mcu_padding_width -10.5, mcu_position_height - 2.5]
-        params:
-          net: COL1
-
-      via_col0_3:
-        what: via
-        where:
-          ref: finger-zone_inner_home
-          shift: [key_width + mcu_padding_width -9.7, mcu_position_height - 4]
-        params:
-          net: COL0
-
-      # via_row1_1:
-      #   what: via
-      #   where:
-      #     ref: finger-zone_ring_home
-      #     shift: [ 0.5 * key_width - 2.5, -2.7]
-      #   params:
-      #     net: ROW1
-
-      # via_row1_2:
-      #   what: via
-      #   where:
-      #     ref: finger-zone_ring_bottom
-      #     shift: [ 0.5 * key_width - 2.5 , 0.5 * key_height - 2]
-      #   params:
-      #     net: ROW1
-
-      # MCU Left
-      right_via-gnd-1: 
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width - 5.8, mcu_position_height + 9.2]
-        params:
-          net: GND
-
-      right_via-gnd-2:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width - 2.6, mcu_position_height + 9.2]
-        params:
-          net: GND
-
-      right_via-row0-1:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width - 4.3, mcu_position_height + 11.52]
-        params:
-          net: ROW0
-
-      right_via-row0-2:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width - 4.3, mcu_position_height - 7.3]
-        params:
-          net: ROW0
-
-      right_via-cs-1:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width - 5, mcu_position_height + 13]
-        params:
-          net: CS
-
-      right_via-mosi-1:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width + 5.1, mcu_position_height + 2.8]
-        params:
-          net: MOSI
-
-      right_via-sck-1:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width + 2.6, mcu_position_height + 0.3]
-        params:
-          net: SCK
-
-      right_via-raw-1:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width + 3.3, mcu_position_height + 13]
-        params:
-          net: RAW
-
-      right_via-positive-1:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width + 0.3, mcu_position_height + 13]
-        params:
-          net: POSITIVE
-
-      right_via-vcc-1:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width, mcu_position_height + 5.3]
-        params:
-          net: VCC
-
-      right_via-row1-1:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width - 5.8, mcu_position_height + 1.6]
-        params:
-          net: ROW1
-
-      # Lower Section Left
-      right_via_reset-1:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [key_width + mcu_padding_width + 6.4, mcu_position_height - 27]
-        params:
-          net: RST
-
-      right_via_col4_1:
-        what: via
-        where:
-          ref: mirror_thumb-zone_outer_sole
-          shift: [5.8 , 5.7]
-        params:
-          net: COL4
-
-      right_via_col4_2:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_bottom
-          shift: [3.25 , 3.6]
-        params:
-          net: COL4
-
-      # via_col3_1:
-      #   what: via
-      #   where:
-      #     ref: thumb-zone_inner_sole
-      #     shift: [-5.8 , 5.7]
-      #   params:
-      #     net: COL3
-
-      right_via_col3_2:
-        what: via
-        where:
-          ref: mirror_finger-zone_index_bottom
-          shift: [3.25 , 3.6]
-        params:
-          net: COL3
-
-      right_via_col0_1:
-        what: via
-        where:
-          ref: mirror_finger-zone_pinky_bottom
-          shift: [3.25 , 8.2]
-        params:
-          net: COL0
-
-      right_via_col1_1:
-        what: via
-        where:
-          ref: mirror_finger-zone_ring_bottom
-          shift: [3.25 , 8.2]
-        params:
-          net: COL1
-
-      right_via_col2_1:
-        what: via
-        where:
-          ref: mirror_finger-zone_middle_bottom
-          shift: [3.25 , 8.2]
-        params:
-          net: COL2
-
-      right_via_col2_2:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [(key_width + mcu_padding_width -11.3) * -1, mcu_position_height - 1]
-        params:
-          net: COL2
-
-      right_via_col1_3:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [(key_width + mcu_padding_width -10.5) * -1, mcu_position_height - 2.5]
-        params:
-          net: COL1
-
-      right_via_col0_3:
-        what: via
-        where:
-          ref: mirror_finger-zone_inner_home
-          shift: [(key_width + mcu_padding_width -9.7) * -1, mcu_position_height - 4]
-        params:
-          net: COL0
-
-      # via_row1_1:
-      #   what: via
-      #   where:
-      #     ref: finger-zone_ring_home
-      #     shift: [ 0.5 * key_width - 2.5, -2.7]
-      #   params:
-      #     net: ROW1
-
-      # via_row1_2:
-      #   what: via
-      #   where:
-      #     ref: finger-zone_ring_bottom
-      #     shift: [ 0.5 * key_width - 2.5 , 0.5 * key_height - 2]
-      #   params:
-      #     net: ROW1
